test/libsolidity/syntaxTests/parsing/external_variable.sol
contract c {
	uint external x;
}
// ----
// ParserError: (19-27): Expected identifier but got 'external'
